ALS-9303: Implement rest controller for new Query entity (#164)